--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -79,22 +79,29 @@ body {
 
 /* ===== VISITOR COUNTER ===== */
 .visitor-counter-badge {
-  position: fixed;
-  top: 20px;
+  position: relative;
+  top: 0px;
+  float: right;
+  width: 130px;
   right: 20px;
   z-index: 1000;
   animation: slideInRight 0.5s ease;
 }
 
+.counter-content .bi {
+  font-size: 1.5rem;
+  
+}
 .counter-content {
-  background: rgba(26, 26, 46, 0.95);
+  background: rgba(29, 29, 63, 0.95);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   color: var(--white);
-  padding: 12px 20px;
+  padding: 5px 15px;
   border-radius: 50px;
   display: flex;
   align-items: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   gap: 12px;
   box-shadow: var(--shadow-xl);
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -209,17 +216,20 @@ body {
 
 .navbar-toggler {
   border: 2px solid black;
-  padding: 0.5rem;
-  color: red;
+  height: 35px;
+  width: 45px;
+}
+.navbar-toggler-icon {
+  font-size: 1.5rem;
+  padding: auto;
+  margin-left: -9px;
 }
 
 .navbar-toggler:focus {
-  box-shadow: none;
+  box-shadow: inset 0 0 0 2px var(--primary-color);
   color: black;
 }
-.navbar-toggler-icon {
-  background-image: var(--bs-navbar-toggler-icon-bg) !important;
-}
+
 
 
 /* ===== HERO SECTION ===== */
@@ -960,17 +970,7 @@ body {
   
 }
 
-.timeline-content::before {
-  content: '';
-  position: absolute;
-  top: 30px;
-  left: -10px;
-  width: 20px;
-  height: 20px;
-  background: var(--white);
-  transform: rotate(45deg);
-  box-shadow: -3px 3px 5px rgba(0, 0, 0, 0.05);
-}
+
 
 .timeline-content:hover {
   transform: translateX(8px);
